--- a/style.css
+++ b/style.css
@@ -6,43 +6,120 @@
 
 body{
   font-size: 62.5%;
-  background-color: #EEEEEE;
+  background-color: red;
+  box-sizing: border-box;
+  width: 100vw;
+  min-height: 100vh;
+  padding-top: 4rem;
 }
 
 header{
   box-sizing: border-box;
-  height: 4rem;
   background-color: #EEEEEE;
+  min-height: 4rem;
   width: 100vw;
   position: fixed;
   top: 0;
   left: 0;
   font-size: 1.05rem;
-  padding: 1rem 2.25rem 0 2.25rem;
+  margin-bottom: 10rem;
+  display: flex;
+}
+
+#logo-container{
+  display: flex;
+  align-items: center;
+  width: 50%;
+  height: 4rem;
+  margin: 0;
 }
 
 #header-img{
+  display: block;
   height: 2.15rem;
   width: auto;
+  margin: 2.25rem;
 }
 
 #nav-bar{
   box-sizing: border-box;
   float: right;
+  width: 50%;
 }
 
 #nav-bar ul{
   list-style-type: none;
-  display: inline-block;
-  padding: 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  align-content: center;
+  width: 100%;
+  height: 100%;
 }
 
 #nav-bar li{
-  display: inline-block;
-  padding: .4rem 3rem 0 3rem;
+  display: block;
+}
+
+@media screen and (max-width: 855px){
+  header{
+    flex-direction: column;
+  }
+  #logo-container{
+    justify-content: center;
+    width: 100%;
+  }
+  #nav-bar{
+    width: 100%;
+  }
+  #nav-bar ul{
+    flex-direction: column;
+    align-items: center;
+    height: 5rem;
+  }
+  body{
+    padding-top: 9rem;
+  }
 }
 
 main{
-  width: 75vw;
+  width: 65rem;
   margin: 0 auto 0 auto;
+  background-color: #EEEEEE;
+}
+
+@media screen and (max-width: 1040px){
+  main{
+    width: 100vw;
+  }
+}
+
+section{
+  margin-bottom: 5rem;
+}
+
+#order{
+  text-align: center;
+}
+
+h1{
+  font-size: 1.75rem;
+  padding: 1.5rem 0 1.15rem 0;
+}
+
+#email{
+  width: 20rem;
+  padding: .5rem;
+}
+
+#submit{
+  display: block;
+  margin: 1rem auto 0 auto;
+  width: 10rem;
+  height: 2rem;
+  border: 0px;
+  border-radius: 2px;
+  background-color: #F1C40E;
+  font-size: 1.05rem;
+  font-weight: 700;
 }
