--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body{
   font-size: 62.5%;
-  background-color: red;
+  background-color: #EEEEEE;
   box-sizing: border-box;
   width: 100vw;
   min-height: 100vh;
@@ -95,7 +95,7 @@ main{
 }
 
 section{
-  margin-bottom: 5rem;
+  margin-bottom: 7rem;
 }
 
 #order{
@@ -122,4 +122,62 @@ h1{
   background-color: #F1C40E;
   font-size: 1.05rem;
   font-weight: 700;
+  transition: background-color 1.5s;
+}
+
+#submit:hover{
+  background-color: #FF8C00;
+}
+
+@media screen and (max-width: 585px){
+  h1{
+    font-size: 1.5rem;
+  }
+  #email{
+    padding: .4rem;
+    width: 18rem;
+  }
+  #submit{
+    height: 1.8rem;
+    width: 9.25rem;
+  }
+}
+
+.icon{
+  color: #FF8C00;
+  font-size: 1.15rem;
+}
+
+.icon-1{
+  grid-area: icon1;
+}
+
+.icon-2{
+  grid-area: icon2;
+}
+
+.icon-3{
+  grid-area: icon3;
+}
+
+.description-1{
+  grid-area: description1;
+}
+
+.description-2{
+  grid-area: description2;
+}
+
+.description-3{
+  grid-area: description3;
+}
+
+.features{
+  display: grid;
+  font-size: 1.03rem;
+  grid-gap: 3rem;
+  padding: 0 3rem 0 3rem;
+  grid-template-areas: 'icon1 description1'
+                       'icon2 description2'
+                       'icon3 description3';
 }
