--- a/style.css
+++ b/style.css
@@ -6,10 +6,11 @@
 
 body{
   font-size: 62.5%;
-  background-color: #EEEEEE;
+  background-color: black;
   box-sizing: border-box;
   width: 100vw;
   min-height: 100vh;
+  height: 100%;
   padding-top: 4rem;
 }
 
@@ -24,6 +25,7 @@ header{
   font-size: 1.05rem;
   margin-bottom: 10rem;
   display: flex;
+  z-index: 2;
 }
 
 #logo-container{
@@ -86,6 +88,7 @@ main{
   width: 65rem;
   margin: 0 auto 0 auto;
   background-color: #EEEEEE;
+  height: 100%;
 }
 
 @media screen and (max-width: 1040px){
@@ -104,7 +107,7 @@ section{
 
 h1{
   font-size: 1.75rem;
-  padding: 1.5rem 0 1.15rem 0;
+  padding: 3rem 0 1.15rem 0;
 }
 
 #email{
@@ -122,7 +125,7 @@ h1{
   background-color: #F1C40E;
   font-size: 1.05rem;
   font-weight: 700;
-  transition: background-color 1.5s;
+  transition: background-color 1.25s;
 }
 
 #submit:hover{
@@ -157,6 +160,7 @@ h1{
 }
 
 .icon-3{
+  font-size: 1rem;
   grid-area: icon3;
 }
 
@@ -176,8 +180,78 @@ h1{
   display: grid;
   font-size: 1.03rem;
   grid-gap: 3rem;
-  padding: 0 3rem 0 3rem;
+  padding: 0 3rem 0 4rem;
   grid-template-areas: 'icon1 description1'
                        'icon2 description2'
                        'icon3 description3';
+}
+
+@media screen and (max-width: 570px){
+  .icon{
+    display: none;
+  }
+  .features{
+    display: block;
+    text-align: center;
+  }
+  .description{
+    margin-bottom: 3rem;
+  }
+}
+
+#video-section{
+  padding: 0 10rem 0 10rem;
+}
+
+#video-wrapper{
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+}
+
+#video{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (max-width: 850px){
+  #video-section{
+    padding: 0 2rem 0 2rem;
+  }
+}
+
+#price{
+  display: flex;
+  margin: 0;
+  padding-bottom: 7rem;
+  justify-content: space-around;
+}
+
+.product_card{
+  font-size: 1.02rem;
+  border: 1px solid #000;
+  width: 18rem;
+  text-align: center;
+}
+
+.card_header{
+  background-color: #DDDDDD;
+  padding: 1rem 0;
+}
+
+.card_info{
+  padding: 1rem 0;
+}
+
+.card_button{
+  background-color: #F1C40E;
+  border: 0px;
+  font-size: 1.25rem;
+}
+
+footer{
+  background-color: #DDDDDD;
 }
