--- a/style.css
+++ b/style.css
@@ -1,300 +1,322 @@
 * {
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
-  font-family: "Poppins", Arial, Helvetica, sans-serif;
+  scroll-padding-top: 5rem;
 }
 
-body{
+body {
+  background-color: #eeeeee;
+  box-sizing: border-box;
   font-size: 62.5%;
-  background-color: #EEEEEE;
-  box-sizing: border-box;
-  width: 100vw;
-  min-height: 100vh;
   height: 100%;
+  min-height: 100vh;
   padding-top: 4rem;
+  width: 100vw;
 }
 
-header{
+header {
+  background-color: #eeeeee;
   box-sizing: border-box;
-  background-color: #EEEEEE;
+  display: flex;
+  font-size: 1.05rem;
+  left: 0;
+  margin-bottom: 10rem;
   min-height: 4rem;
-  width: 100vw;
   position: fixed;
   top: 0;
-  left: 0;
-  font-size: 1.05rem;
-  margin-bottom: 10rem;
-  display: flex;
+  width: 100vw;
   z-index: 2;
 }
 
-#logo-container{
-  display: flex;
+a {
+  color: #010101;
+  text-decoration: none;
+  transition: all 1.25s;
+}
+
+a:hover {
+  color: #ff8c00;
+}
+
+a:active {
+  opacity: 70%;
+}
+
+#logo-container {
   align-items: center;
-  width: 50%;
+  display: flex;
   height: 4rem;
   margin: 0;
+  width: 50%;
 }
 
-#header-img{
+#header-img {
   display: block;
   height: 2.15rem;
-  width: auto;
   margin: 2.25rem;
+  width: auto;
 }
 
-#nav-bar{
+#nav-bar {
   box-sizing: border-box;
   float: right;
   width: 50%;
 }
 
-#nav-bar ul{
-  list-style-type: none;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+#nav-bar ul {
   align-content: center;
-  width: 100%;
+  align-items: center;
+  display: flex;
   height: 100%;
+  justify-content: space-around;
+  list-style-type: none;
+  width: 100%;
 }
 
-#nav-bar li{
+#nav-bar li {
   display: block;
 }
 
-@media screen and (max-width: 855px){
-  header{
+@media screen and (max-width: 855px) {
+  header {
     flex-direction: column;
   }
-  #logo-container{
+  #logo-container {
     justify-content: center;
     width: 100%;
   }
-  #nav-bar{
+  #nav-bar {
     width: 100%;
   }
-  #nav-bar ul{
-    flex-direction: column;
+  #nav-bar ul {
     align-items: center;
+    flex-direction: column;
     height: 5rem;
   }
-  body{
+  body {
     padding-top: 9rem;
+  }
+  * {
+    scroll-padding-top: 10rem;
   }
 }
 
-main{
-  width: 65rem;
-  margin: 0 auto 0 auto;
-  background-color: #EEEEEE;
+main {
+  background-color: #eeeeee;
   height: 100%;
+  margin: 0 auto 0 auto;
+  width: 65rem;
 }
 
-@media screen and (max-width: 1040px){
-  main{
+@media screen and (max-width: 1040px) {
+  main {
     width: 100vw;
   }
 }
 
-section:not(:last-child){
+section:not(:last-child) {
   margin-bottom: 7rem;
 }
 
-#order{
+#order {
   text-align: center;
 }
 
-h1{
+h1 {
   font-size: 1.75rem;
   padding: 3rem 0 1.15rem 0;
 }
 
-#email{
+#email {
+  padding: 0.5rem;
   width: 20rem;
-  padding: .5rem;
 }
 
-#submit{
-  display: block;
-  margin: 1rem auto 0 auto;
-  width: 10rem;
-  height: 2rem;
+#submit {
+  background-color: #f1c40e;
   border: 0px;
   border-radius: 2px;
-  background-color: #F1C40E;
+  display: block;
   font-size: 1.05rem;
   font-weight: 700;
+  height: 2rem;
+  margin: 1rem auto 0 auto;
   transition: background-color 1.25s;
+  width: 10rem;
 }
 
-#submit:hover{
-  background-color: #FF8C00;
+#submit:hover {
+  background-color: #ff8c00;
 }
 
-@media screen and (max-width: 585px){
-  h1{
+@media screen and (max-width: 585px) {
+  h1 {
     font-size: 1.5rem;
   }
-  #email{
-    padding: .4rem;
+  #email {
+    padding: 0.4rem;
     width: 18rem;
   }
-  #submit{
+  #submit {
     height: 1.8rem;
     width: 9.25rem;
   }
 }
 
-.icon{
-  color: #FF8C00;
+.icon {
+  color: #ff8c00;
   font-size: 1.15rem;
 }
 
-.icon-1{
+.icon-1 {
   grid-area: icon1;
 }
 
-.icon-2{
+.icon-2 {
   grid-area: icon2;
 }
 
-.icon-3{
+.icon-3 {
   font-size: 1rem;
   grid-area: icon3;
 }
 
-.description-1{
+.description-1 {
   grid-area: description1;
 }
 
-.description-2{
+.description-2 {
   grid-area: description2;
 }
 
-.description-3{
+.description-3 {
   grid-area: description3;
 }
 
-.features{
+.features {
   display: grid;
   font-size: 1.03rem;
   grid-gap: 3rem;
+  grid-template-areas:
+    "icon1 description1"
+    "icon2 description2"
+    "icon3 description3";
   padding: 0 3rem 0 4rem;
-  grid-template-areas: 'icon1 description1'
-                       'icon2 description2'
-                       'icon3 description3';
 }
 
-@media screen and (max-width: 570px){
-  .icon{
+@media screen and (max-width: 570px) {
+  .icon {
     display: none;
   }
-  .features{
+  .features {
     display: block;
     text-align: center;
   }
-  .description{
+  .description {
     margin-bottom: 3rem;
   }
 }
 
-#video-section{
+#video-section {
   padding: 0 10rem 0 10rem;
 }
 
-#video-wrapper{
-  position: relative;
-  padding-bottom: 56.25%;
+#video-wrapper {
   height: 0;
+  padding-bottom: 56.25%;
+  position: relative;
 }
 
-#video{
+#video {
+  border-radius: 2px;
+  height: 100%;
+  left: 0;
   position: absolute;
   top: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
 }
 
-@media screen and (max-width: 850px){
-  #video-section{
+@media screen and (max-width: 850px) {
+  #video-section {
     padding: 0 2rem 0 2rem;
   }
 }
 
-#price{
+#price {
   display: flex;
-  justify-content: space-around;
   flex-wrap: wrap;
+  justify-content: space-around;
 }
 
-.product_card{
+.product_card {
+  border: 1px solid #dddddd;
+  border-radius: 2px;
+  box-shadow: 4px 8px 16px hsl(0deg 0% 0% / 0.25);
   font-size: 1.02rem;
-  border: 1px solid #DDDDDD;
-  width: 18rem;
+  margin: 0 1rem 2rem 1rem;
   min-width: 15rem;
   text-align: center;
-  border-radius: 2px;
-  margin: 0 1rem 2rem 1rem;
-  box-shadow: 4px 8px 16px hsl(0deg 0% 0% / 0.25);
+  width: 18rem;
 }
 
-.card_header{
-  background-color: #DDDDDD;
-  padding: 1rem 0;
-  font-size: .7rem;
-}
-
-.card_info{
+.card_header {
+  background-color: #dddddd;
+  font-size: 0.7rem;
   padding: 1rem 0;
 }
 
-.card_info h3{
-  padding-bottom: 1.75rem;
+.card_info {
+  padding: 1rem 0;
+}
+
+.card_info h3 {
   font-size: 1.5rem;
+  padding-bottom: 1.75rem;
 }
 
-.card_info p:not(:last-child){
-  padding-bottom: .75rem;
+.card_info p:not(:last-child) {
+  padding-bottom: 0.75rem;
 }
 
-.card_button{
-  background-color: #F1C40E;
+.card_button {
+  background-color: #f1c40e;
   border: 0px;
+  border-radius: 2px;
   font-size: 1.25rem;
   font-weight: 100;
-  margin: 1rem 0 1rem 0;
-  width: 6rem;
   height: 2rem;
-  border-radius: 2px;
+  margin: 1rem 0 1rem 0;
   transition: background-color 1.25s;
+  width: 6rem;
 }
 
-.card_button:hover{
-  background-color: #FF8C00;
+.card_button:hover {
+  background-color: #ff8c00;
 }
 
-footer{
-  background-color: #DDDDDD;
-  width:65rem;
-  margin: 0 auto 0 auto;
-  padding: 1rem 1rem;
+footer {
+  background-color: #dddddd;
+  border-radius: 2px 2px 0px 0px;
   box-sizing: border-box;
+  margin: 0 auto 0 auto;
+  max-width: 65rem;
+  padding: 1rem 1rem;
   text-align: right;
 }
 
-footer ul{
+footer ul {
   list-style: none;
 }
 
-footer li{
+footer li {
   display: inline-block;
-  font-size: 1.05rem;
-  padding: 0 0 .5rem 1rem;
+  font-size: 1.02rem;
+  padding: 0 0.5rem 0.5rem 1rem;
 }
 
-footer p{
-  font-size: .9rem;
+footer p {
+  font-size: 0.9rem;
   font-weight: 300;
+  opacity: 70%;
 }
